some edit files and arrange correct order.